[project]
name = "todue"
version = "0.1.0"
description = "Better TODOs!"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Matyas Kuti", email = "matyas.kuti@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Pytest",
    "Typing :: Typed",
]

[project.optional-dependencies]
lint = [
    "flake8>=7",
    "black>=24",
    "isort>=5",
    "pylint>=3",
    "mypy>=1",
]
test = [
    "pytest>=8",
    "pytest-cov>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["todue"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
strict = true
pretty = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pylint.BASIC]
module-rgx = "[a-z_][a-z0-9_]{2,32}$"
const-rgx = "[a-zA-Z_][a-zA-Z0-9_]{2,32}$"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
function-rgx = "([a-z_][a-z0-9_]{2,32}|(assert|test_|__)[a-z_][a-z0-9_]{2,80})$"
method-rgx = "([a-z_][a-z0-9_]{2,32}|(assert|test_|__)[a-z_][a-z0-9_]{2,80})$"
attr-rgx = "[a-z_][a-z0-9_]{2,32}$"
argument-rgx = "[a-z_][a-z0-9_]{2,32}$"
variable-rgx = "[a-z_][a-z0-9_]{2,32}$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,32}|(__.*__))$"
inlinevar-rgx = "[A-Za-z_][A-Za-z0-9_]*$"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "locally-disabled",
    "too-few-public-methods",
    "fixme",
]
msg-template = "{module}:{line} [{msg_id}: {symbol}] - {msg}"

[tool.pylint.REPORTS]
reports = "yes"

[tool.pylint.FORMAT]
max-line-length = 79

[tool.pylint.SIMILARITIES]
min-similarity-lines = 6
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
